--- a/styles.css
+++ b/styles.css
@@ -79,9 +79,17 @@ cursor: pointer;
 .logo{
     text-align: center;
     position: absolute;
-    top: 20%;
+    top: 21%;
     width: 100%;
 }
+
+.logo1{
+    text-align: center;
+    position: absolute;
+    top: 17%;
+    width: 100%;
+}
+
 
 @media (max-width: 599px){
     .logo{
