--- a/styles.css
+++ b/styles.css
@@ -41,25 +41,26 @@ input:focus{
 } 
 
 @media (max-width: 599px){
-    .text {
+    .text 
+    {
       width: 60%
     }
 
 }
 .button{
-background-color: #f2f2f2;
-border: 1px solid #f2f2f2;
-border-radius: 4px;
-color: #5F6368;
-font-family: arial,sans-serif;
-font-size: 14px;
-margin: 11px 4px;
-padding: 0 16px;
-line-height: 27px;
-height: 36px;
-min-width: 54px;
-text-align: center;
-cursor: pointer;
+    background-color: #f2f2f2;
+    border: 1px solid #f2f2f2;
+    border-radius: 4px;
+    color: #5F6368;
+    font-family: arial,sans-serif;
+    font-size: 14px;
+    margin: 11px 4px;
+    padding: 0 16px;
+    line-height: 27px;
+    height: 36px;
+    min-width: 54px;
+    text-align: center;
+    cursor: pointer;
 }
 
 .button:hover{
